# app_stockportfolio_cpp

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  vcpkg.json
installer/: installer.iss
src/spt.app/: application.cpp  application.ixx  portfoliodialog.cpp  spt.app.ixx  tickerselectordialog.cpp  window.cpp  window.ixx
src/spt.domain/: company.cpp  companysearch.cpp  money.cpp  portfolio.cpp  price.cpp  pricedelta.cpp  pricefetcher.cpp  pricepoint.cpp  spt.domain.ixx  ticker.cpp  transaction.cpp
src/spt.infrastructure/: alphavantagefetcher.cpp  alphavantagesearch.cpp  alphavantageservice.cpp  database.cpp  database.ixx  httpclient.cpp  httpheaders.cpp  httprequest.cpp  httpresponse.cpp  jsonparser.cpp  jsonvalue.cpp  repository.cpp  restservice.cpp  resultset.cpp  row.cpp  spt.infrastructure.ixx  statement.cpp  value.cpp  yahoocompanysearch.cpp  yahoopricefetcher.cpp
src/spt.infrastructure.net/: httpclient.cpp  httpclient.ixx  httpheaders.cpp  httpheaders.ixx  httprequest.cpp  httprequest.ixx  httpresponse.cpp  httpresponse.ixx  spt.infrastructure.net.ixx
src/spt.infrastructure.repositories/: repository.cpp  repository.ixx  spt.infrastructure.repositories.ixx
src/spt.infrastructure.sql/: database.cpp  database.ixx  resultset.cpp  resultset.ixx  row.cpp  row.ixx  spt.infrastructure.sql.ixx  statement.cpp  statement.ixx  value.cpp  value.ixx
src/spt.infrastructure.text/: jsonparser.cpp  jsonparser.ixx  jsonvalue.cpp  jsonvalue.ixx  spt.infrastructure.text.ixx
